# FineGrainedAction

./: .gitignore  CMakeLists.txt  README.md  annotate_video.cpp  crawler.py  down_load_video.py  download_video.py  utility_function.cc  utility_function.cpp  utility_function.h
data/: CMakeLists.txt  annotate_image.cpp  annotate_video.cpp  bing_search_api.py  clean_image.cpp  crawler.py  delete_image.cpp  delete_wrong_image.cpp  download_video.py  image_cats.txt  img_uti.cc  img_uti.h  update_cats.sh  utility_function.cc  utility_function.h  video_cats.txt
data/image/tennis_forehand/: name_list.txt
data/video/baseball_hit/MLB_Best_Hits_Hitting_Montage/: file_list.txt  label.txt
data/video/baseball_pitch/MLB_Top_Pitchers_2014/: file_list.txt  label.txt  label_cp.txt
data/video/baseball_stolen_base/Billy_Hamilton___Stolen_Bases___Highlights_2015/: file_list.txt  label.txt
data/video/nba_dunk/Posterized_NBA_Best_Dunks_and_Posters_of_2014_2015_Season/: file_list.txt  label.txt
data/video/nba_jumpshot/Smooth_Jumpshots_Of_The_2012_2013_NBA_Season_Slow_Mo/: file_list.txt  label.txt  label_cp.txt
data/video/nba_layup/NBA__Top_20_Layups_of_the_2013_2014_Regular_Season/: file_list.txt  label_cp.txt
data/video/tennis_backhand/The_Best_One_Handed_Backhand___Federer_Wawrinka_or_Gasquet_HD/: file_list.txt  label.txt  label_cp.txt
data/video/tennis_forehand/Forehand_Lesson___The_Best_Forehands_In_The_World/: file_list.txt  label_cp.txt
data/video/tennis_serve/Top_10_Greatest_Servers_in_Tennis_History/: file_list.txt  label.txt
fga-240/: label.txt  test.txt  train.txt
nn/: CMakeLists.txt  bvlc_alexnet.py  bvlc_alexnet_cn5.py  bvlc_alexnet_fc7.py  cal_accuracy.py  cal_accuracy_v3.py  combine_res.cpp  combine_res.py  extract_feature_nn.py  extract_triplet_feature.py  file_list.txt  file_list_fine_tune_test.txt  file_list_fine_tune_train.txt  file_list_test.txt  file_list_train.txt  fine_tune_nn.py  fine_tune_nn_v2.py  fine_tune_nn_v3.py  fine_tune_nt.py  fine_tune_test_res.txt  gen_fine_tune_test_file.py  gen_fine_tune_test_file_v2.py  gen_fine_tune_test_file_v3.py  gen_fine_tune_train_file.py  gen_fine_tune_train_file_v2.py  gen_test_file.py  gen_test_file_fc7.py  gen_train_file.py  gen_train_file_fc7.py  gen_train_file_fine_tune_v3.py  gen_train_file_v2.py  gen_train_file_v2_cn5.py  gen_train_file_v3.py  gen_txt_file.py  image_io.py  load_txt.py  my_test.py  nn.py  nt.py  play_file_list.py  (+16 more)
nn/kaffe/: core.py
nn/kaffe/tensorflow/: network.py
